--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
             <nav
                 class="md:relative md:w-auto w-full md:mt-0 mt-16 translate-y-2 md:translate-y-0 top-0 md:pb-0 pb-3 bg-gray-900 md:bg-transparent absolute items-center md:space-x-2 text-sm font-medium text-gray-300 md:flex hidden">
-                <a href="mailto:info@eaglevisionworld.com" class="ps-5 pe-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500 fa-solid fa-envelope"></i></a>
-                <a href="https://wa.me/233244662064" class="px-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500  fa-brands fa-whatsapp"></i></a>
-                <a href="tel:+233244662064" class="px-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500 fa-solid fa-phone"></i></a>
-                <a href="https://web.facebook.com/eaglevisioninstitutegh" class="px-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500 fa-brands fa-facebook"></i></a>
+                <a href="mailto:info@eaglevisionworld.com" class="ps-5 pe-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500 fa-solid fa-envelope"></i></a>
+                <a href="https://wa.me/233244662064" class="px-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500  fa-brands fa-whatsapp"></i></a>
+                <a href="tel:+233244662064" class="px-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500 fa-solid fa-phone"></i></a>
+                <a href="https://web.facebook.com/eaglevisioninstitutegh" class="px-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500 fa-brands fa-facebook"></i></a>
 
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
@@ -192,7 +196,8 @@
                             </svg>
                             <span>Featured</span>
                         </div> -->
-                        <h1 class="text-4xl font-bold leading-none lg:text-5xl xl:text-6xl"><a href="#_">Our programmes</a></h1>
+                        <h1 class="text-4xl font-bold leading-none lg:text-5xl xl:text-6xl"><a href="#_">Our
+                                programmes</a></h1>
 
                     </div>
                 </div>
@@ -204,16 +209,18 @@
                         <img class="object-cover w-full mb-2 overflow-hidden rounded-lg shadow-sm max-h-56"
                             src="assets/images/slide2.jpg">
                     </a>
-                    <div
-                        class="bg-amber-500 flex items-center w-28 h-1 leading-none rounded-full ">
+                    <div class="bg-amber-500 flex items-center w-28 h-1 leading-none rounded-full ">
                         <!-- <span>Lifestyle</span> -->
                     </div>
-                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl"><a href="#_">General or Academic English Program</a>
+                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl"><a href="#_">General or Academic English
+                            Program</a>
                     </h2>
                     <p class="text-sm text-gray-500">
                         <a class="transition-all hover:text-yellow-500" href="">
-                        The General English Programme at Eagle Vision Language Institute prepares you for effective and appropriate communication in real-life situations.
-                    </a></p>
+                            The General English Programme at Eagle Vision Language Institute prepares you for effective
+                            and appropriate communication in real-life situations.
+                        </a>
+                    </p>
 
                 </div>
 
@@ -222,12 +229,12 @@
                         <img class="object-cover w-full mb-2 overflow-hidden rounded-lg shadow-sm max-h-56"
                             src="assets/images/slide1.jpg">
                     </a>
-                    <div
-                        class="bg-pink-500 flex items-center px-3 py-1.5 leading-none rounded-full text-xs font-medium uppercase text-white inline-block">
-                        <span>See More</span>
-                    </div>
+                    <div class="bg-pink-500 flex items-center w-28 h-1 leading-none rounded-full "> </div>
                     <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Professional or Executive English Programs</h2>
-                    <p class="text-sm text-gray-500"><a href="">The Executive English Programme is a bouquet of individually tailored English courses carefully designed to meet your specific communication</a></p>
+                    <p class="text-sm text-gray-500"><a href="">The Executive English Programme is a bouquet of
+                            individually tailored English courses carefully designed to meet your specific
+                            communication</a>
+                    </p>
                 </div>
 
                 <div class="flex flex-col items-start col-span-12 space-y-3 sm:col-span-6 xl:col-span-4">
@@ -235,12 +242,11 @@
                         <img class="object-cover w-full mb-2 overflow-hidden rounded-lg shadow-sm max-h-56"
                             src="assets/images/slide1.jpg">
                     </a>
-                    <div
-                        class="bg-red-500 flex items-center px-3 py-1.5 leading-none rounded-full text-xs font-medium uppercase text-white inline-block">
-                        <span>Lifestyle</span>
-                    </div>
+                    <div class="bg-red-500 flex items-center w-28 h-1 leading-none rounded-full "></div>
                     <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Vacation English Programs</h2>
-                    <p class="text-sm text-gray-500"><a href="">The Vacation English Immersion Programme is an exceptional opportunity for students to improve their English in an English-speaking environment while.</a></p>
+                    <p class="text-sm text-gray-500"><a href="">The Vacation English Immersion Programme is an
+                            exceptional opportunity for students to improve their English in an English-speaking
+                            environment while.</a></p>
 
                 </div>
 
@@ -249,12 +255,12 @@
                         <img class="object-cover w-full mb-2 overflow-hidden rounded-lg max-h-56"
                             src="assets/images/slide2.jpg">
                     </a>
-                    <div
-                        class="bg-blue-500 flex items-center px-3 py-1.5 leading-none rounded-full text-xs font-medium uppercase text-white inline-block">
-                        <span>Lifestyle</span>
-                    </div>
+                    <div class="bg-blue-500 flex items-center w-28 h-1 leading-none rounded-full "></div>
+
                     <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Computer Studies</h2>
-                    <p class="text-sm text-gray-500"><a href="">Today’s digital environment demands that you learn to use computers and other electronic gadgetry effectively. This will increase your productivity at</a></p>
+                    <p class="text-sm text-gray-500"><a href="">Today’s digital environment demands that you learn to
+                            use computers and other electronic gadgetry effectively. This will increase your
+                            productivity at</a></p>
 
                 </div>
 
@@ -263,12 +269,11 @@
                         <img class="object-cover w-full mb-2 overflow-hidden rounded-lg max-h-56"
                             src="assets/images/slide1.jpg">
                     </a>
-                    <div
-                        class="bg-gray-800 flex items-center px-3 py-1.5 leading-none rounded-full text-xs font-medium uppercase text-white inline-block">
-                        <span>Business</span>
-                    </div>
+                    <div class="bg-gray-800 flex items-center w-28 h-1 leading-none rounded-full "></div>
+
                     <h2 class="text-lg font-bold sm:text-xl md:text-2xl">TOEFL / IELTS / TOEIC Preparation</h2>
-                    <p class="text-sm text-gray-500"><a href="">Test of English as a Foreign Language is a standardized test to measure the English language ability of non-native speakers</a></p>
+                    <p class="text-sm text-gray-500"><a href="">Test of English as a Foreign Language is a standardized
+                            test to measure the English language ability of non-native speakers</a></p>
 
                 </div>
 
@@ -277,12 +282,11 @@
                         <img class="object-cover w-full mb-2 overflow-hidden rounded-lg max-h-56"
                             src="assets/images/slide2.jpg">
                     </a>
-                    <div
-                        class="bg-yellow-400 flex items-center px-3 py-1.5 leading-none rounded-full text-xs font-medium uppercase text-white inline-block">
-                        <span>Business skills</span>
-                    </div>
+                    <div class="bg-yellow-400 flex items-center w-28 h-1 leading-none rounded-full "></div>
                     <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Entrepreneurship Training</h2>
-                    <p class="text-sm text-gray-500"><a href="">Every business owner needs core entrepreneurial skills to create and successfully manage their business. Being an entrepreneur is hard work, requires a lot</a></p>
+                    <p class="text-sm text-gray-500"><a href="">Every business owner needs core entrepreneurial skills
+                            to create and successfully manage their business. Being an entrepreneur is hard work,
+                            requires a lot</a></p>
 
                 </div>
 
@@ -293,7 +297,8 @@
 
     <!-- AlpineJS Library -->
     <!-- hero-18 -->
-    <section class="relative flex flex-col-reverse min-h-screen w-full px-6 py-16 bg-gray-900 lg:pt-0 lg:flex-col lg:pb-0">
+    <section
+        class="relative flex flex-col-reverse min-h-screen w-full px-6 py-16 bg-gray-900 lg:pt-0 lg:flex-col lg:pb-0">
         <div
             class="inset-y-0 top-0 right-0 z-0 w-full max-w-xl px-4 mx-auto md:px-0 lg:pr-0 lg:mb-0 lg:mx-0 lg:w-7/12 lg:max-w-full lg:absolute xl:px-0">
             <svg class="absolute left-0 hidden h-full text-gray-900 transform -translate-x-1/2 lg:block"
@@ -313,8 +318,15 @@
                     The CEO's Vision</span>
                 </h1>
                 <p class="mb-5 text-base text-gray-300 sm:pr-10 md:text-lg">
-                    
-Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless world of communication. Leading with a focus on cultural exchange and innovation, he equips students with the tools to thrive globally, fostering an inspired community and breaking down barriers through language.
+
+                    Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless world of
+                    communication. Leading with a focus on cultural exchange and innovation, he equips students with the
+                    tools to thrive globally, fostering an inspired community and breaking down barriers through
+                    language.
+                </p>
+                <p>
+                    <i class="fa-brands fa-facebook text-white text-2xl mr-3"></i>
+                    <i class="fa-brands fa-linkedin text-white text-2xl"></i>
                 </p>
                 <div class="flex flex-col items-center pt-2 sm:flex-row sm:pt-4">
                     <a href="/"
@@ -349,9 +361,10 @@ Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless w
                 </p>
             </div>
 
-            <div class="z-10 grid gap-5 md:grid-cols-6 lg:grid-cols-9">
+            <div class="z-10 flex gap-5 md:flex-wrap lg:flex-wrap">
+                <!-- <div class="z-10 flex gap-5 md:flex-wrap lg:flex-wrap"> -->
                 <!-- Feature 1 -->
-                <div class="col-span-4 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
                     data-rounded-max="rounded-full">
                     <div
                         class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
@@ -378,7 +391,7 @@ Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless w
                     </div>
                 </div>
                 <!-- Feature 2 -->
-                <div class="col-span-4 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
                     data-rounded-max="rounded-full">
                     <div
                         class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
@@ -404,7 +417,7 @@ Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless w
                     </div>
                 </div>
                 <!-- Feature 3 -->
-                <div class="col-span-4 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
                     data-rounded-max="rounded-full">
                     <div
                         class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
@@ -431,7 +444,7 @@ Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless w
                     </div>
                 </div>
                 <!-- Feature 4 -->
-                <div class="col-span-4 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
                     data-rounded-max="rounded-full">
                     <div
                         class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
@@ -490,7 +503,8 @@ Comlan Juvence Babagbeto, CEO of the language institute, envisions a boundless w
             class="relative flex flex-col items-center w-full max-w-6xl px-4 py-8 mx-auto text-center lg:text-left lg:block sm:px-6 md:pb-0 md:pt-12 lg:px-12 lg:py-12">
             <h2
                 class="my-4 text-3xl font-extrabold tracking-tight text-white sm:text-4xl md:text-5xl lg:my-0 xl:text-4xl sm:leading-tight">
-                Join our community   <span class="block text-indigo-200 xl:inline" data-primary="indigo-500">of passionate learners</span>
+                Join our community <span class="block text-indigo-200 xl:inline" data-primary="indigo-500">of passionate
+                    learners</span>
             </h2>
             <div class="flex mb-8 lg:mt-6 lg:mb-0">
                 <div class="inline-flex">
