--- a/about.html
+++ b/about.html
@@ -80,11 +80,16 @@
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Accomodation</a>
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
-                <a href="#_" class="inline px-3 py-2"><img
+                <a href="#_" class="inline px-2 py-2"><img
                         src="https://img.freepik.com/vecteurs-premium/drapeau-royaume-uni-illustration-vectorielle-rayures-bleues-rouges_34480-663.jpg?w=1060"
-                        width="28px" alt=""></a>
+                        width="28px" alt="">
+                </a>
+                <a href="#_" class="inline px-3 py-2"><img
+                    src="https://th.bing.com/th/id/OIP.RPP275EzjhW01m70KN3J_AHaFj?w=247&h=185&c=7&r=0&o=5&pid=1.7"
+                    width="28px" alt="">
+                </a>
                 <a href="#_"
-                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Admission</a>
+                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Book Now</a>
             </div>
         </div>
     </section>
