--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         src="https://img.freepik.com/vecteurs-premium/drapeau-royaume-uni-illustration-vectorielle-rayures-bleues-rouges_34480-663.jpg?w=1060"
                         width="28px" alt=""></a>
                 <a href="#_"
-                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Admission</a>
+                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Book Now</a>
             </div>
         </div>
     </section>
