--- a/coming.html
+++ b/coming.html
@@ -67,7 +67,7 @@
                 <a href="about.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our School
                 </a>
-                <a href="programs.html"
+                <a href="programmes.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our programs
                 </a>
                 <a href="students.html"
@@ -78,7 +78,7 @@
                 <a href="contact.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Contact
                 </a>
-            </nav>
+                </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
                 <a href="#_" class="inline px-3 pr-1"><img
                         src="https://img.freepik.com/vecteurs-premium/drapeau-royaume-uni-illustration-vectorielle-rayures-bleues-rouges_34480-663.jpg?w=1060"
@@ -94,7 +94,13 @@
         </div>
     </section>
     <!-- Navbar End-->
-
+    <!-- content -->
+    <section class=" flex items-center justify-center min-h-screen">
+        <div class="w-4/5 bg-gray-100 rounded-2xl p-8 drop-shadow-xl">
+            
+        </div>
+    </section>
+    <!-- content end -->
     <!-- footer-->
 
     <section class="w-full bg-black" data-primary="blue-500">
