--- a/about.html
+++ b/about.html
@@ -65,31 +65,34 @@
             </div>
             <nav id="navr"
                 class="md:relative md:w-auto w-full md:mt-0 mt-16 translate-y-2 md:translate-y-0 top-0 md:pb-0 pb-3 bg-white md:bg-transparent absolute items-center md:space-x-2 text-sm font-medium text-gray-500 md:flex hidden">
-                <a href="#_"
+                <a href="index.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Home</a>
-                <a href="#_"
-                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">About
-                    us</a>
-                <a href="#_"
-                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our
-                    programmes</a>
-                <a href="#_"
-                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Student
-                    life</a>
-                <a href="#_"
+                <a href="about.html"
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our School
+                </a>
+                <a href="programmes.html"
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our programs
+                </a>
+                <a href="students.html"
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Student life
+                </a>
+                <a href="accomodation.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Accomodation</a>
+                <a href="contact.html"
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Contact
+                </a>
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
-                <a href="#_" class="inline px-2 py-2"><img
+                <a href="#_" class="inline px-3 pr-1"><img
                         src="https://img.freepik.com/vecteurs-premium/drapeau-royaume-uni-illustration-vectorielle-rayures-bleues-rouges_34480-663.jpg?w=1060"
                         width="28px" alt="">
-                </a>
-                <a href="#_" class="inline px-3 py-2"><img
-                    src="https://th.bing.com/th/id/OIP.RPP275EzjhW01m70KN3J_AHaFj?w=247&h=185&c=7&r=0&o=5&pid=1.7"
-                    width="28px" alt="">
-                </a>
-                <a href="#_"
-                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Book Now</a>
+                    </a>
+                    <a href="#_" class="inline px-3 pl-1 pr-5"><img
+                        src="https://th.bing.com/th/id/OIP.RPP275EzjhW01m70KN3J_AHaFj?w=247&h=185&c=7&r=0&o=5&pid=1.7"
+                        class="w-6" alt="">
+                    </a>
+                <a href="register.html"
+                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Join us in Ghana</a>
             </div>
         </div>
     </section>
@@ -99,8 +102,8 @@
     <section class="relative py-16 bg-white bg-bottom bg-cover" style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
         <div class="flex justify-center ">
             <div>
-                <h1 class="text-white font-bold text-5xl mb-2 text-center"> About Us</h1>
-                <div class="w-56 h-2 bg-blue-500 rounded"></div>
+                <h1 class="text-white font-bold text-5xl mb-2 text-center"> Our School</h1>
+                <div class="w-64 h-2 bg-blue-500 rounded"></div>
             </div>
         </div>
     </section>
@@ -335,7 +338,7 @@
                     <a href="#_"
                             class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-white transition duration-150 ease-in-out bg-amber-400 border border-transparent rounded-md hover:text-white hover:bg-amber-500 focus:outline-none focus:shadow-outline "
                             data-primary="indigo-600">
-                            Book now
+                           Join us in Ghana
                     </a>
                 </div>
             </div>
