--- a/students.html
+++ b/students.html
@@ -17,15 +17,19 @@
 
             <nav
                 class="md:relative md:w-auto w-full md:mt-0 mt-16 translate-y-2 md:translate-y-0 top-0 md:pb-0 pb-3 bg-gray-900 md:bg-transparent absolute items-center md:space-x-2 text-sm font-medium text-gray-300 md:flex hidden">
-                <a href="mailto:info@eaglevisionworld.com" class="ps-5 pe-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500 fa-solid fa-envelope"></i></a>
-                <a href="https://wa.me/233244662064" class="px-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500  fa-brands fa-whatsapp"></i></a>
-                <a href="tel:+233244662064" class="px-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500 fa-solid fa-phone"></i></a>
-                <a href="https://web.facebook.com/eaglevisioninstitutegh" class="px-2 md:py-2 py-3"><i class="text-white text-xl hover:text-yellow-500 fa-brands fa-facebook"></i></a>
+                <a href="mailto:info@eaglevisionworld.com" class="ps-5 pe-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500 fa-solid fa-envelope"></i></a>
+                <a href="https://wa.me/233244662064" class="px-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500  fa-brands fa-whatsapp"></i></a>
+                <a href="tel:+233244662064" class="px-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500 fa-solid fa-phone"></i></a>
+                <a href="https://web.facebook.com/eaglevisioninstitutegh" class="px-2 md:py-2 py-3"><i
+                        class="text-white text-xl hover:text-yellow-500 fa-brands fa-facebook"></i></a>
 
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
-                <a href="#_" 
-                class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Online programme
+                <a href="#_" class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Online
+                    programme
                 </a>
             </div>
         </div>
@@ -65,13 +69,16 @@
                 <a href="index.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Home</a>
                 <a href="about.html"
-                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our School
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our
+                    School
                 </a>
-                <a href="programs.html"
-                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our programs
+                <a href="programmes.html"
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our
+                    programs
                 </a>
                 <a href="students.html"
-                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Student life
+                    class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Student
+                    life
                 </a>
                 <a href="accomodation.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Accomodation</a>
@@ -83,18 +90,157 @@
                 <a href="#_" class="inline px-3 pr-1"><img
                         src="https://img.freepik.com/vecteurs-premium/drapeau-royaume-uni-illustration-vectorielle-rayures-bleues-rouges_34480-663.jpg?w=1060"
                         width="28px" alt="">
-                    </a>
-                    <a href="#_" class="inline px-3 pl-1 pr-5"><img
+                </a>
+                <a href="#_" class="inline px-3 pl-1 pr-5"><img
                         src="https://th.bing.com/th/id/OIP.RPP275EzjhW01m70KN3J_AHaFj?w=247&h=185&c=7&r=0&o=5&pid=1.7"
                         class="w-6" alt="">
-                    </a>
+                </a>
                 <a href="register.html"
                     class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Join us in Ghana</a>
             </div>
         </div>
     </section>
     <!-- Navbar End-->
+    <!-- Banner -->
+    <section class="relative py-16 bg-white bg-bottom bg-cover"
+        style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
+        <div class="flex justify-center ">
+            <div>
+                <h1 class="text-white font-bold text-5xl mb-2 text-center"> Student Life</h1>
+                <div class="w-82 h-2 bg-blue-500 rounded"></div>
+            </div>
+        </div>
+    </section>
+    <!-- Banner End-->
+    <!-- card -->
+    <section class="relative w-full bg-white">
+        <div class="absolute w-full h-32 bg-gradient-to-b from-gray-100 to-white"></div>
+        <div class="relative w-full px-5 py-10 mx-auto sm:py-12 md:py-16 md:px-10 max-w-7xl">
 
+
+            <div class="flex grid h-full grid-cols-12 gap-10 pb-10 mt-8 sm:mt-16">
+
+
+                <div class="grid grid-cols-12 col-span-12 gap-7">
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="comming.html" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://img.freepik.com/free-photo/airplane-sunset_1150-8338.jpg?t=st=1717548250~exp=1717551850~hmac=b31250962d7fb5465668b98a0008ca991ad906d1810e680628dc7b797b236d03&w=900">
+                        </a>
+                        <div class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl">
+                                <a href="coming.html">Coming To Ghana</a>
+                            </h2>
+                            <p class="mt-2 text-sm text-gray-500">
+                                Prepare for your journey to Ghana with confidence! Discover essential travel tips and requirements to ensure a smooth arrival.
+                                From securing your passport and understanding visa needs to important health precautions, we've got you covered. 
+                                <a class="hover:text-blue-700" href="coming.html">Read more...</a>
+                            </p>
+                        </div>
+                        
+                    </div>
+
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
+                        </a>
+                        <div
+                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <div
+                                class="bg-red-400 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
+                                <span>Food</span>
+                            </div>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Eating for
+                                    Productivity</a></h2>
+                            <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
+                                you can eat to maximize productivity.</p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://img.freepik.com/free-photo/airplane-sunset_1150-8338.jpg?t=st=1717548250~exp=1717551850~hmac=b31250962d7fb5465668b98a0008ca991ad906d1810e680628dc7b797b236d03&w=900">
+                        </a>
+                        <div
+                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <div
+                                class="bg-purple-500 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
+                                <span>Resources</span>
+                            </div>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">A Design Mind-set</a>
+                            </h2>
+                            <p class="mt-2 text-sm text-gray-500">What does it mean to have a design mind-set? Learn how
+                                to improve your eye for design.</p>
+                        </div>
+                    </div>
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://cdn.devdojo.com/images/may2021/workstation.jpg">
+                        </a>
+                        <div
+                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <div
+                                class="bg-indigo-400 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
+                                <span>Inspiration</span>
+                            </div>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Best Workstations of the
+                                    Year</a></h2>
+                            <p class="mt-2 text-sm text-gray-500">Check out these inspiring workstations to get ideas on
+                                how to level-up your workstation.</p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
+                        </a>
+                        <div
+                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <div
+                                class="bg-red-400 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
+                                <span>Food</span>
+                            </div>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Eating for
+                                    Productivity</a></h2>
+                            <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
+                                you can eat to maximize productivity.</p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://cdn.devdojo.com/images/may2021/book-design.jpg">
+                        </a>
+                        <div
+                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">A Design Mind-set</a>
+                            </h2>
+                            <p class="mt-2 text-sm text-gray-500">What does it mean to have a design mind-set? Learn how
+                                to improve your eye for design.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- AlpineJS Library -->
+
+
+
+    <!-- card end  -->
     <!-- footer-->
 
     <section class="w-full bg-black" data-primary="blue-500">
@@ -188,7 +334,7 @@
             </div>
         </div>
     </section>
-<!-- footer end -->
+    <!-- footer end -->
     <!-- AlpineJS Library -->
 
 </body>
